<resources>
    <string name="app_name">MainActivity</string>
    <string name="ServerHost">Server Host:</string>
    <string name="ServerPort">Server Port:</string>
    <string name="UserName">User Name:</string>
    <string name="Password">Password:</string>
    <string name="FirstName">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="Email">Email:</string>
    <string name="Gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="LoginButton">SIGN IN</string>
    <string name="RegisterButton">Register</string>
    <string name="EventList">LIFE EVENTS</string>
    <string name="FamilyList">FAMILY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event">EventActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="SearchMenu">Search</string>
    <string name="settingMenu">Setting</string>
</resources>